replace command line by jocker API client
Signed-off-by: Nicolas De Loof <nicolas.deloof@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>command-launcher</artifactId>
             <version>1.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.docker</groupId>
+            <artifactId>jocker</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
@@ -36,6 +42,11 @@
                 <version>16</version>
                 <scope>import</scope>
                 <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.7</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
